fix (count-up block icon): the icon should be behind the text

--- a/src/block/count-up/style.scss
+++ b/src/block/count-up/style.scss
@@ -11,6 +11,9 @@
 	.ugb-countup__item {
 		display: flex;
 		flex-direction: column;
+		> * {
+			z-index: 2;
+		}
 	}
 	.ugb-countup--hide,
 	.ugb-countup-hide {
@@ -31,6 +34,7 @@
 	}
 
 	.ugb-countup__icon {
+		z-index: 1;
 		svg {
 			margin: 0 auto;
 			height: 50px;
